// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kibana_migrations plugin init migrates the kibana index 1`] = `
Object {
  "data": Object {
    ".kibana-4.5.6-903bdb8e0a613cbe24fe86480bd7c100a25112b9": Object {
      "field1:a": Object {
        "_source": Object {
          "field1": "Dangit",
          "type": "field1",
          "updated_at": undefined,
        },
      },
      "field2:b": Object {
        "_source": Object {
          "field2": "Bobby",
          "type": "field2",
          "updated_at": undefined,
        },
      },
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "checksum": "9772e119360552cc7bade8b311957ab1bca4a087",
                "id": "p1",
                "mappings": "{\\"field1\\":{\\"type\\":\\"text\\"}}",
                "migrationIds": Array [
                  "mg1",
                ],
              },
              Object {
                "checksum": "605c5acd01d06da94873e1f8312f9d3d644f2a01",
                "id": "p2",
                "mappings": "{\\"field2\\":{\\"type\\":\\"text\\"}}",
                "migrationIds": Array [
                  "mg2",
                ],
              },
            ],
            "previousIndex": ".kibana-4.5.6-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    ".kibana-4.5.6-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".kibana": Object {
        ".kibana-4.5.6-903bdb8e0a613cbe24fe86480bd7c100a25112b9": Object {
          "aliases": Object {
            ".kibana": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".kibana-4.5.6-903bdb8e0a613cbe24fe86480bd7c100a25112b9": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "field1": Object {
              "type": "text",
            },
            "field2": Object {
              "type": "text",
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".kibana-4.5.6-original": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "field1": Object {
              "type": "text",
            },
            "field2": Object {
              "type": "text",
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".kibana-4.5.6-903bdb8e0a613cbe24fe86480bd7c100a25112b9": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".kibana-4.5.6-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;

exports[`kibana_migrations plugin init respects the force option 1`] = `
Object {
  "data": Object {
    ".kibana-4.5.6-989db2448f309bfdd99b513f37c84b8f5794d2b5": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "previousIndex": ".kibana-4.5.6-original",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    ".kibana-4.5.6-original": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".kibana": Object {
        ".kibana-4.5.6-989db2448f309bfdd99b513f37c84b8f5794d2b5": Object {
          "aliases": Object {
            ".kibana": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".kibana-4.5.6-989db2448f309bfdd99b513f37c84b8f5794d2b5": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".kibana-4.5.6-original": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "checksum": Object {
                      "type": "keyword",
                    },
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".kibana-4.5.6-989db2448f309bfdd99b513f37c84b8f5794d2b5": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      ".kibana-4.5.6-original": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`kibana_migrations plugin migrationOptions exposes pluginSpecs 1`] = `
Array [
  Object {
    "checksum": "d3e9a53a895f2eab53921489f92002aa971e1132",
    "id": "foo",
    "mappings": Object {
      "bar": Object {
        "type": "text",
      },
    },
    "migrations": Array [
      Object {
        "id": "mg1",
        "seed": [Function],
      },
    ],
  },
]
`;
